# github-app

./: .cirrus.yml  .gitignore  .license_template  Cargo.toml  LICENSE  README.md
examples/: delete_merged_branches.rs  echo.rs  minimal.rs
src/: lib.rs  logger.rs
